third time's a charm

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="jamie.jpg" class="auth-image" alt="Jamie DeHaan">
+                        <img src="assets/images/Jamie.jpg" class="auth-image" alt="Jamie DeHaan">
                         <p>Cupcake ipsum dolor sit amet fruitcake cake gummies sweet. Tart jelly-o topping tiramisu topping
                             pie. Toffee dessert chocolate.</p>
                         <p>Cheesecake oat cake cheesecake sugar plum powder croissant topping. Cake chocolate cake cake danish.
