added crystal collector to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,9 +55,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="work">
-                            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-
-                            <h3>Word Guess</h3>
+                            <a href="https://jamiedehaan.github.io/unit-4-game/">
+                            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Crystal Collector">
+                            <h3>Crystal Collector!</h3>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-4">
