added crystal collector preview image to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                     <div class="col-md-4">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/unit-4-game/">
-                            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Crystal Collector">
+                            <img src="assets/images/c-c-screen-shot.png" alt="Crystal Collector">
                             <h3>Crystal Collector!</h3>
                             </a>
                         </div>
