added colorado trivia to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,9 +63,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="work">
-                            <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-                            <h3>RPG Game</h3>
+                            <a href="https://jamiedehaan.github.io/TriviaGame/">
+                            <img src="assets/images/c-t-screen-shot.png" alt="Colorado Trivia">
+                            <h3>Colorado Trivia!</h3>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-4">
