added psychic game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,9 +55,17 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="work">
+                            <a href="https://jamiedehaan.github.io/Psychic-Game/">
+                            <img src="assets/images/p-g-screen-shot.png" alt="Psychic Game">
+                            <h3>The Psychic Game!</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="work">
                             <a href="https://jamiedehaan.github.io/unit-4-game/">
                             <img src="assets/images/c-c-screen-shot.png" alt="Crystal Collector">
-                            <h3>Crystal Collector!</h3>
+                            <h3>Crystals Collector!</h3>
                             </a>
                         </div>
                     </div>
@@ -67,13 +75,6 @@
                             <img src="assets/images/c-t-screen-shot.png" alt="Colorado Trivia">
                             <h3>Colorado Trivia!</h3>
                             </a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="work">
-                            <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-                            <h3>Trivia Game</h3>
                         </div>
                     </div>
                     </div>
