added sweet tooth to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,9 +81,10 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="work">
-                                <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-                                <h3>Rutgers Info Widget</h3>
+                                <a href="https://jamiedehaan.github.io/Sweet-Tooth/">
+                                <img src="assets/images/s-t-screen-shot.png" alt="Sweet Tooth">
+                                <h3>Sweet Tooth!</h3>
+                                </a>
                             </div>
                         </div>
                     <div class="col-md-4">
