--- a/portfolio.html
+++ b/portfolio.html
@@ -89,9 +89,10 @@
                         </div>
                     <div class="col-md-4">
                         <div class="work">
-                            <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-                            <h3>Rock Paper Scissors</h3>
+                            <a href="https://jamiedehaan.github.io/train-scheduler/">
+                            <img src="assets/images/t-s-screen-shot.png" alt="Train Scheduler">
+                            <h3>Train Scheduler!</h3>
+                            </a>
                         </div>
                     </div>
                 </div>
