added meteor life, bro to portfolio & edited copyright on bottom of pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -95,6 +95,14 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class="work">
+                            <a href="https://jaco5.github.io/project-one/">
+                            <img src="assets/images/m-l-b-screen-shot.png" alt="Meteor Life, Bro">
+                            <h3>Meteor Life, Bro!</h3>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -102,7 +110,7 @@
 
     <footer>
         <div class="container">
-            Copyright &copy;
+            Copyright &copy Jamie DeHaan
         </div>
     </footer>
 </body>
