--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 
     <footer>
         <div class="container">
-            Copyright &copy;
+            Copyright &copy Jamie DeHaan
         </div>
     </footer>
 </body>
