--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <footer>
         <div class="container">
-            Copyright &copy;
+            Copyright &copy Jamie DeHaan
         </div>
     </footer>
 </body>
