--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -43,6 +45,12 @@
                     </li>
                 </ul>
             </div>
+
+            <div id="links">
+                <a href="https://github.com/jamiedehaan" class="fab fa-github"></a>
+                <a href="https://www.linkedin.com/in/jamielynndehaan" class="fab fa-linkedin"></a>
+            </div>
+
         </nav>
         </div>
     </header>
@@ -55,13 +63,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <img src="assets/images/Jamie.jpg" class="auth-image" alt="Jamie DeHaan">
-                        <p>Cupcake ipsum dolor sit amet fruitcake cake gummies sweet. Tart jelly-o topping tiramisu topping
-                            pie. Toffee dessert chocolate.</p>
-                        <p>Cheesecake oat cake cheesecake sugar plum powder croissant topping. Cake chocolate cake cake danish.
-                            Candy tiramisu dessert gummies candy canes candy canes. Soufflé marzipan jelly-o bonbon bonbon
-                            sugar plum jelly halvah.</p>
-                        <p>Chupa chups marshmallow wafer jelly-o bonbon oat cake dragée liquorice. Tootsie roll sweet roll jelly-o
-                            jujubes cookie cake soufflé powder. Jelly cake jelly-o lemon drops marshmallow donut cookie lollipop.</p>
+                        <p>Ambitious Web Developer with a passion to create dynamic, responsive and interactive applications
+                            for highly efficient user experience. Provide a disciplined approach to all initiatives within
+                            a fast paced, team or remote environment. Share my enthusiasm for leading edge technology with
+                            effective communication producing positive, successful outcomes.</p>
                     </div>
                 </div>
             </div>
@@ -73,6 +78,7 @@
             Copyright &copy Jamie DeHaan
         </div>
     </footer>
+    
 </body>
 
 </html>
