--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
         crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -43,6 +45,12 @@
                     </li>
                 </ul>
             </div>
+
+            <div id="links">
+                <a href="https://github.com/jamiedehaan" class="fab fa-github"></a>
+                <a href="https://www.linkedin.com/in/jamielynndehaan" class="fab fa-linkedin"></a>
+            </div>
+
         </nav>
         </div>
     </header>
@@ -50,6 +58,7 @@
     <div id="main-container" class="container">
         <section class="main-section">
             <h1>Contact</h1>
+            <h3>Please submit the form below or send an email to: jamie.price@comcast.net</h3>
             <br>
             <div class="container">
                 <div class="row">
@@ -82,6 +91,7 @@
             Copyright &copy Jamie DeHaan
         </div>
     </footer>
+    
 </body>
 
 </html>
