--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,8 @@
         crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -43,6 +45,12 @@
                     </li>
                 </ul>
             </div>
+
+            <div id="links">
+                <a href="https://github.com/jamiedehaan" class="fab fa-github"></a>
+                <a href="https://www.linkedin.com/in/jamielynndehaan" class="fab fa-linkedin"></a>
+            </div>
+
         </nav>
         </div>
     </header>
@@ -56,55 +64,77 @@
                     <div class="col-md-4">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/Psychic-Game/">
-                            <img src="assets/images/p-g-screen-shot.png" alt="Psychic Game">
-                            <h3>The Psychic Game!</h3>
+                                <img src="assets/images/p-g-screen-shot.png" alt="Psychic Game">
+                                <h3>The Psychic Game</h3>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/unit-4-game/">
-                            <img src="assets/images/c-c-screen-shot.png" alt="Crystal Collector">
-                            <h3>Crystals Collector!</h3>
+                                <img src="assets/images/c-c-screen-shot.png" alt="Crystal Collector">
+                                <h3>Crystals Collector</h3>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/TriviaGame/">
-                            <img src="assets/images/c-t-screen-shot.png" alt="Colorado Trivia">
-                            <h3>Colorado Trivia!</h3>
+                                <img src="assets/images/c-t-screen-shot.png" alt="Colorado Trivia">
+                                <h3>Colorado Trivia</h3>
                             </a>
                         </div>
                     </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="work">
-                                <a href="https://jamiedehaan.github.io/Sweet-Tooth/">
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="work">
+                            <a href="https://jamiedehaan.github.io/Sweet-Tooth/">
                                 <img src="assets/images/s-t-screen-shot.png" alt="Sweet Tooth">
-                                <h3>Sweet Tooth!</h3>
-                                </a>
-                            </div>
+                                <h3>Sweet Tooth</h3>
+                            </a>
                         </div>
+                    </div>
                     <div class="col-md-4">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/train-scheduler/">
-                            <img src="assets/images/t-s-screen-shot.png" alt="Train Scheduler">
-                            <h3>Train Scheduler!</h3>
+                                <img src="assets/images/t-s-screen-shot.png" alt="Train Scheduler">
+                                <h3>Train Scheduler</h3>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="work">
                             <a href="https://jaco5.github.io/project-one/">
-                            <img src="assets/images/m-l-b-screen-shot.png" alt="Meteor Life, Bro">
-                            <h3>Meteor Life, Bro!</h3>
+                                <img src="assets/images/m-l-b-screen-shot.png" alt="Meteor Life, Bro">
+                                <h3>Meteor Life, Bro</h3>
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div id="gCode">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h3>GitHub Code</h3>
+                                <a href="https://github.com/jamiedehaan/Psychic-Game">The Psychic Game</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/unit-4-game">Crystals Collector</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/TriviaGame">Colorado Trivia</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/Sweet-Tooth">Sweet Tooth</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/train-scheduler">Train Scheduler</a>
+                                <br>
+                                <a href="https://github.com/Jaco5/project-one">Meteor Life, Bro</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
         </section>
     </div>
 
@@ -113,6 +143,7 @@
             Copyright &copy Jamie DeHaan
         </div>
     </footer>
+    
 </body>
 
 </html>
