ready to submit updated portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -61,7 +62,7 @@
             <br>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/Psychic-Game/">
                                 <img src="assets/images/p-g-screen-shot.png" alt="Psychic Game">
@@ -69,7 +70,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/unit-4-game/">
                                 <img src="assets/images/c-c-screen-shot.png" alt="Crystal Collector">
@@ -77,7 +78,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/TriviaGame/">
                                 <img src="assets/images/c-t-screen-shot.png" alt="Colorado Trivia">
@@ -85,9 +86,9 @@
                             </a>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
+                <!-- </div>
+                <div class="row"> -->
+                    <div class="col-md-6">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/Sweet-Tooth/">
                                 <img src="assets/images/s-t-screen-shot.png" alt="Sweet Tooth">
@@ -95,7 +96,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/train-scheduler/">
                                 <img src="assets/images/t-s-screen-shot.png" alt="Train Scheduler">
@@ -103,7 +104,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="work">
                             <a href="https://jaco5.github.io/project-one/">
                                 <img src="assets/images/m-l-b-screen-shot.png" alt="Meteor Life, Bro">
