added liri bot and bamazon to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,22 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://drive.google.com/file/d/1VAqFOt609UATboO--EZhgSLMBcJJe3-2/view">
+                                <img src="assets/images/l-b-screen-shot.png" alt="LIRI Bot">
+                                <h3>LIRI BOT</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://drive.google.com/file/d/1HTAIs1UJOVZVYKH-HnT3cDVFgVT6IVpa/view">
+                                <img src="assets/images/b-screen-shot.png" alt="Bamazon">
+                                <h3>Bamazon</h3>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -131,6 +147,10 @@
                                 <a href="https://github.com/jamiedehaan/train-scheduler">Train Scheduler</a>
                                 <br>
                                 <a href="https://github.com/Jaco5/project-one">Meteor Life, Bro</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/liri-node-app">LIRI Bot</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/bamazon">Bamazon</a>
                             </div>
                         </div>
                     </div>
