--- a/portfolio.html
+++ b/portfolio.html
@@ -128,6 +128,14 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://cryptic-atoll-72247.herokuapp.com/">
+                                <img src="assets/images/f-f-screen-shot.png" alt="Friend Finder">
+                                <h3>Friend Finder</h3>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -151,6 +159,8 @@
                                 <a href="https://github.com/jamiedehaan/liri-node-app">LIRI Bot</a>
                                 <br>
                                 <a href="https://github.com/jamiedehaan/bamazon">Bamazon</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/FriendFinder">Friend Finder</a>
                             </div>
                         </div>
                     </div>
