added eat-da-burger to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -136,6 +136,14 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://fast-taiga-65945.herokuapp.com/">
+                                <img src="assets/images/burger-screen-shot.png" alt="Eat-Da-Burger">
+                                <h3>Eat-Da-Burger</h3>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -161,6 +169,8 @@
                                 <a href="https://github.com/jamiedehaan/bamazon">Bamazon</a>
                                 <br>
                                 <a href="https://github.com/jamiedehaan/FriendFinder">Friend Finder</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/burger">Eat-Da-Burger</a>
                             </div>
                         </div>
                     </div>
