--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="work">
-                            <a href="https://jaco5.github.io/project-one/">
+                            <a href="https://jamiedehaan.github.io/meteor-life-bro/">
                                 <img src="assets/images/m-l-b-screen-shot.png" alt="Meteor Life, Bro">
                                 <h3>Meteor Life, Bro</h3>
                             </a>
@@ -144,6 +144,14 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://peaceful-savannah-96764.herokuapp.com/">
+                                <img src="assets/images/i-t-l-screen-shot.png" alt="Is This Legit?">
+                                <h3>Is This Legit?</h3>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -162,7 +170,7 @@
                                 <br>
                                 <a href="https://github.com/jamiedehaan/train-scheduler">Train Scheduler</a>
                                 <br>
-                                <a href="https://github.com/Jaco5/project-one">Meteor Life, Bro</a>
+                                <a href="https://github.com/jamiedehaan/meteor-life-bro">Meteor Life, Bro</a>
                                 <br>
                                 <a href="https://github.com/jamiedehaan/liri-node-app">LIRI Bot</a>
                                 <br>
@@ -171,6 +179,8 @@
                                 <a href="https://github.com/jamiedehaan/FriendFinder">Friend Finder</a>
                                 <br>
                                 <a href="https://github.com/jamiedehaan/burger">Eat-Da-Burger</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/is-this-legit">Is This Legit?</a>
                             </div>
                         </div>
                     </div>
