--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -64,10 +64,13 @@
                 <div class="row">
                     <div class="col-md-12">
                         <img src="assets/images/Jamie.jpg" class="auth-image" alt="Jamie DeHaan">
-                        <p>Ambitious Web Developer with a passion to create dynamic, responsive and interactive applications
-                            for highly efficient user experience. Provide a disciplined approach to all initiatives within
-                            a fast paced, team or remote environment. Share my enthusiasm for leading edge technology with
-                            effective communication producing positive, successful outcomes.</p>
+                        <p>Ambitious Front End Web Developer with a passion to create interactive, organized and
+                            responsive applications for highly efficient user experience. I completed three avenues of
+                            education which include University of Denver (Coding Boot Camp), Udemy Academy (Web
+                            Developer Boot Camp) and Galvanize Inc (JavaScript Accelerated Course). I have obtained the
+                            necessary skills to qualify as a valuable contributor on a dream team. I look forward to
+                            sharing my enthusiasm for leading edge technology with effective communication producing
+                            positive, successful outcomes.</p>
                     </div>
                 </div>
             </div>
@@ -79,7 +82,7 @@
             Copyright &copy Jamie DeHaan
         </div>
     </footer>
-    
+
 </body>
 
 </html>
