--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
                     <div class="col-md-6">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/Psychic-Game/">
-                                <img src="assets/images/p-g-screen-shot.png" alt="Psychic Game">
+                                <img src="assets/images/p-g-screen-shot.png" alt="The Psychic Game">
                                 <h3>The Psychic Game</h3>
                             </a>
                         </div>
@@ -73,7 +73,7 @@
                     <div class="col-md-6">
                         <div class="work">
                             <a href="https://jamiedehaan.github.io/unit-4-game/">
-                                <img src="assets/images/c-c-screen-shot.png" alt="Crystal Collector">
+                                <img src="assets/images/c-c-screen-shot.png" alt="Crystals Collector">
                                 <h3>Crystals Collector</h3>
                             </a>
                         </div>
@@ -116,7 +116,7 @@
                         <div class="work">
                             <a href="https://drive.google.com/file/d/1VAqFOt609UATboO--EZhgSLMBcJJe3-2/view">
                                 <img src="assets/images/l-b-screen-shot.png" alt="LIRI Bot">
-                                <h3>LIRI BOT</h3>
+                                <h3>LIRI Bot</h3>
                             </a>
                         </div>
                     </div>
@@ -152,6 +152,14 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://jamiedehaan.github.io/fall-clicky/">
+                                <img src="assets/images/clicky-screen-shot.png" alt="Fall Clicky Game">
+                                <h3>Fall Clicky Game</h3>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -181,6 +189,8 @@
                                 <a href="https://github.com/jamiedehaan/burger">Eat-Da-Burger</a>
                                 <br>
                                 <a href="https://github.com/jamiedehaan/is-this-legit">Is This Legit?</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/fall-clicky">Fall Clicky Game</a>
                             </div>
                         </div>
                     </div>
