added spooky life

--- a/portfolio.html
+++ b/portfolio.html
@@ -160,6 +160,14 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://frozen-cliffs-62376.herokuapp.com/">
+                                <img src="assets/images/s-l-screen-shot.png" alt="Spooky Life">
+                                <h3>Spooky Life</h3>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -191,6 +199,8 @@
                                 <a href="https://github.com/jamiedehaan/is-this-legit">Is This Legit?</a>
                                 <br>
                                 <a href="https://github.com/jamiedehaan/fall-clicky">Fall Clicky Game</a>
+                                <br>
+                                <a href="https://github.com/jamiedehaan/spooky-life">Spooky Life</a>
                             </div>
                         </div>
                     </div>
