updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -64,91 +64,9 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="work">
-                            <a href="https://jamiedehaan.github.io/Psychic-Game/">
-                                <img src="assets/images/p-g-screen-shot.png" alt="The Psychic Game">
-                                <h3>The Psychic Game</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://jamiedehaan.github.io/unit-4-game/">
-                                <img src="assets/images/c-c-screen-shot.png" alt="Crystals Collector">
-                                <h3>Crystals Collector</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://jamiedehaan.github.io/TriviaGame/">
-                                <img src="assets/images/c-t-screen-shot.png" alt="Colorado Trivia">
-                                <h3>Colorado Trivia</h3>
-                            </a>
-                        </div>
-                    </div>
-                <!-- </div>
-                <div class="row"> -->
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://jamiedehaan.github.io/Sweet-Tooth/">
-                                <img src="assets/images/s-t-screen-shot.png" alt="Sweet Tooth">
-                                <h3>Sweet Tooth</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://jamiedehaan.github.io/train-scheduler/">
-                                <img src="assets/images/t-s-screen-shot.png" alt="Train Scheduler">
-                                <h3>Train Scheduler</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://jamiedehaan.github.io/meteor-life-bro/">
-                                <img src="assets/images/m-l-b-screen-shot.png" alt="Meteor Life, Bro">
-                                <h3>Meteor Life, Bro</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://drive.google.com/file/d/1VAqFOt609UATboO--EZhgSLMBcJJe3-2/view">
-                                <img src="assets/images/l-b-screen-shot.png" alt="LIRI Bot">
-                                <h3>LIRI Bot</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://drive.google.com/file/d/1HTAIs1UJOVZVYKH-HnT3cDVFgVT6IVpa/view">
-                                <img src="assets/images/b-screen-shot.png" alt="Bamazon">
-                                <h3>Bamazon</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://cryptic-atoll-72247.herokuapp.com/">
-                                <img src="assets/images/f-f-screen-shot.png" alt="Friend Finder">
-                                <h3>Friend Finder</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://fast-taiga-65945.herokuapp.com/">
-                                <img src="assets/images/burger-screen-shot.png" alt="Eat-Da-Burger">
-                                <h3>Eat-Da-Burger</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="work">
-                            <a href="https://peaceful-savannah-96764.herokuapp.com/">
-                                <img src="assets/images/i-t-l-screen-shot.png" alt="Is This Legit?">
-                                <h3>Is This Legit?</h3>
+                            <a href="https://frozen-cliffs-62376.herokuapp.com/">
+                                <img src="assets/images/s-l-screen-shot.png" alt="CO Haunted Houses">
+                                <h3>CO Haunted Houses</h3>
                             </a>
                         </div>
                     </div>
@@ -162,9 +80,65 @@
                     </div>
                     <div class="col-md-6">
                         <div class="work">
-                            <a href="https://frozen-cliffs-62376.herokuapp.com/">
-                                <img src="assets/images/s-l-screen-shot.png" alt="Spooky Life">
-                                <h3>Spooky Life</h3>
+                            <a href="https://peaceful-savannah-96764.herokuapp.com/">
+                                <img src="assets/images/i-t-l-screen-shot.png" alt="Is This Legit?">
+                                <h3>Is This Legit?</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://fast-taiga-65945.herokuapp.com/">
+                                <img src="assets/images/burger-screen-shot.png" alt="Eat-Da-Burger">
+                                <h3>Eat-Da-Burger</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://cryptic-atoll-72247.herokuapp.com/">
+                                <img src="assets/images/f-f-screen-shot.png" alt="Friend Finder">
+                                <h3>Friend Finder</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://drive.google.com/file/d/1HTAIs1UJOVZVYKH-HnT3cDVFgVT6IVpa/view">
+                                <img src="assets/images/b-screen-shot.png" alt="Bamazon">
+                                <h3>Bamazon</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://drive.google.com/file/d/1VAqFOt609UATboO--EZhgSLMBcJJe3-2/view">
+                                <img src="assets/images/l-b-screen-shot.png" alt="LIRI Bot">
+                                <h3>LIRI Bot</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://jamiedehaan.github.io/meteor-life-bro/">
+                                <img src="assets/images/m-l-b-screen-shot.png" alt="Meteor Life, Bro">
+                                <h3>Meteor Life, Bro</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://jamiedehaan.github.io/train-scheduler/">
+                                <img src="assets/images/t-s-screen-shot.png" alt="Train Scheduler">
+                                <h3>Train Scheduler</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="work">
+                            <a href="https://jamiedehaan.github.io/Sweet-Tooth/">
+                                <img src="assets/images/s-t-screen-shot.png" alt="Sweet Tooth">
+                                <h3>Sweet Tooth</h3>
                             </a>
                         </div>
                     </div>
@@ -172,39 +146,33 @@
             </div>
 
             <div id="gCode">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h3>GitHub Code</h3>
-                                <a href="https://github.com/jamiedehaan/Psychic-Game">The Psychic Game</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/unit-4-game">Crystals Collector</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/TriviaGame">Colorado Trivia</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/Sweet-Tooth">Sweet Tooth</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/train-scheduler">Train Scheduler</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/meteor-life-bro">Meteor Life, Bro</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/liri-node-app">LIRI Bot</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/bamazon">Bamazon</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/FriendFinder">Friend Finder</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/burger">Eat-Da-Burger</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/is-this-legit">Is This Legit?</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/fall-clicky">Fall Clicky Game</a>
-                                <br>
-                                <a href="https://github.com/jamiedehaan/spooky-life">Spooky Life</a>
-                            </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3>GitHub Code</h3>
+                            <a href="https://github.com/jamiedehaan/spooky-life">CO Haunted Houses</a>
+                            <br>
+                            <a href="https://github.com/jamiedehaan/fall-clicky">Fall Clicky Game</a>
+                            <br>
+                            <a href="https://github.com/jamiedehaan/is-this-legit">Is This Legit?</a>
+                            <br>
+                            <a href="https://github.com/jamiedehaan/burger">Eat-Da-Burger</a>
+                            <br>
+                            <a href="https://github.com/jamiedehaan/FriendFinder">Friend Finder</a>
+                            <br>
+                            <a href="https://github.com/jamiedehaan/bamazon">Bamazon</a>
+                            <br>
+                            <a href="https://github.com/jamiedehaan/liri-node-app">LIRI Bot</a>
+                            <br>
+                            <a href="https://github.com/jamiedehaan/meteor-life-bro">Meteor Life, Bro</a>
+                            <br>
+                            <a href="https://github.com/jamiedehaan/train-scheduler">Train Scheduler</a>
+                            <br>
+                            <a href="https://github.com/jamiedehaan/Sweet-Tooth">Sweet Tooth</a>
                         </div>
                     </div>
                 </div>
+            </div>
 
         </section>
     </div>
@@ -214,7 +182,7 @@
             Copyright &copy Jamie DeHaan
         </div>
     </footer>
-    
+
 </body>
 
 </html>
