--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -74,6 +75,34 @@
                     </div>
                 </div>
             </div>
+
+            <br>
+
+            <div class="container">
+                <div class="row">
+                    <div class"col-md-12>
+                        <i class="devicon-bootstrap-plain-wordmark skills"></i>
+                        <i class="devicon-css3-plain-wordmark skills"></i>
+                        <i class="devicon-express-original-wordmark skills"></i>
+                        <i class="devicon-git-plain-wordmark skills"></i>
+                        <i class="devicon-github-plain-wordmark skills"></i>
+                        <i class="devicon-gitlab-plain-wordmark skills"></i>
+                        <i class="devicon-heroku-original-wordmark skills"></i>
+                        <i class="devicon-html5-plain-wordmark skills"></i>
+                        <i class="devicon-javascript-plain skills"></i>
+                        <i class="devicon-jquery-plain-wordmark skills"></i>
+                        <i class="devicon-mongodb-plain-wordmark skills"></i>
+                        <i class="devicon-mysql-plain-wordmark skills"></i>
+                        <i class="devicon-nodejs-plain-wordmark skills"></i>
+                        <i class="devicon-react-original-wordmark skills"></i>
+                        <i class="devicon-sequelize-plain-wordmark skills"></i>
+                        <i class="devicon-slack-plain-wordmark skills"></i>
+                        <i class="devicon-trello-plain-wordmark skills"></i>
+                        <i class="devicon-wordpress-plain-wordmark skills"></i>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </div>
 
